// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Legend /> Default story renders snapshot 1`] = `
<div
  class="css-1f6fg97 e1ws54rk0"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-6chbkm e1ws54rk2"
      color="#615da2"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      H. sapiens
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-kjgeow e1ws54rk2"
      color="#9e5798"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      M. musculus
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-pglety e1ws54rk2"
      color="#b76278"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      C. Jacques
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-6cf8on e1ws54rk2"
      color="#b27c5a"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      D. rerio
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1eb4yf4 e1ws54rk2"
      color="#9e9554"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      M. mulatta
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1iyj8c1 e1ws54rk2"
      color="#89ab60"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      P. mirabillis
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1if8w9c e1ws54rk2"
      color="#78bc7f"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      V. cholerae
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-2vxfm2 e1ws54rk2"
      color="#8ac2d2"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      Other (17)
    </span>
  </div>
</div>
`;

exports[`<Legend /> WithSelection story renders snapshot 1`] = `
<div
  style="width: 400px;"
>
  <div
    class="css-1f6fg97 e1ws54rk0"
  >
    <div
      aria-label="H. sapiens: 3212"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-6chbkm e1ws54rk2"
        color="#615da2"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        H. sapiens
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        3,212
      </span>
    </div>
    <div
      aria-label="M. musculus: 130"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-kjgeow e1ws54rk2"
        color="#9e5798"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        M. musculus
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        130
      </span>
    </div>
    <div
      aria-label="C. Jacques: 89"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-pglety e1ws54rk2"
        color="#b76278"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        C. Jacques
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        89
      </span>
    </div>
    <div
      aria-label="D. rerio: 65"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-6cf8on e1ws54rk2"
        color="#b27c5a"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        D. rerio
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        65
      </span>
    </div>
    <div
      aria-label="M. mulatta: 45"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1eb4yf4 e1ws54rk2"
        color="#9e9554"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        M. mulatta
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        45
      </span>
    </div>
    <div
      aria-label="P. mirabillis: 34"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1iyj8c1 e1ws54rk2"
        color="#89ab60"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        P. mirabillis
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        34
      </span>
    </div>
    <div
      aria-label="V. cholerae: 12"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-1if8w9c e1ws54rk2"
        color="#78bc7f"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        V. cholerae
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        12
      </span>
    </div>
    <div
      aria-label="Other (17): 40"
      aria-pressed="false"
      class="css-k26mqz e1ws54rk1"
      role="button"
      tabindex="0"
    >
      <div
        class="css-2vxfm2 e1ws54rk2"
        color="#8ac2d2"
      />
      <span
        class="css-tk6mw9 e1ws54rk3"
      >
        Other (17)
      </span>
      <span
        class="css-1b78qr4 e1ws54rk4"
      >
        40
      </span>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary e1gcweb20 css-1yl127d-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-12bqywg e1gcweb21"
        >
          Select All
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-colorPrimary e1gcweb20 css-16n8l0c-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="css-12bqywg e1gcweb21"
        >
          Clear Selection
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap; gap: 4px;"
    />
  </div>
</div>
`;

exports[`<Legend /> WithValues story renders snapshot 1`] = `
<div
  class="css-1f6fg97 e1ws54rk0"
>
  <div
    aria-label="H. sapiens: 3212"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-6chbkm e1ws54rk2"
      color="#615da2"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      H. sapiens
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      3,212
    </span>
  </div>
  <div
    aria-label="M. musculus: 130"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-kjgeow e1ws54rk2"
      color="#9e5798"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      M. musculus
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      130
    </span>
  </div>
  <div
    aria-label="C. Jacques: 89"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-pglety e1ws54rk2"
      color="#b76278"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      C. Jacques
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      89
    </span>
  </div>
  <div
    aria-label="D. rerio: 65"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-6cf8on e1ws54rk2"
      color="#b27c5a"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      D. rerio
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      65
    </span>
  </div>
  <div
    aria-label="M. mulatta: 45"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1eb4yf4 e1ws54rk2"
      color="#9e9554"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      M. mulatta
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      45
    </span>
  </div>
  <div
    aria-label="P. mirabillis: 34"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1iyj8c1 e1ws54rk2"
      color="#89ab60"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      P. mirabillis
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      34
    </span>
  </div>
  <div
    aria-label="V. cholerae: 12"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-1if8w9c e1ws54rk2"
      color="#78bc7f"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      V. cholerae
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      12
    </span>
  </div>
  <div
    aria-label="Other (17): 40"
    aria-pressed="false"
    class="css-k26mqz e1ws54rk1"
    role="button"
    tabindex="0"
  >
    <div
      class="css-2vxfm2 e1ws54rk2"
      color="#8ac2d2"
    />
    <span
      class="css-tk6mw9 e1ws54rk3"
    >
      Other (17)
    </span>
    <span
      class="css-1b78qr4 e1ws54rk4"
    >
      40
    </span>
  </div>
</div>
`;
